# s3a

./: .gitignore  CHANGELOG.md  README.md  blss_state.py  blsss_evm_analyzer.py  evmole_integration_plan.md  foundry.toml  pyproject.toml  requirements.txt  run_test.sh  setup-script.sh  test_decompiler.py  test_enhanced.py  z3_improvement_plan.md
concolic_eth_swap/core/: __init__.py  annotated_blocks.py  basic_blocks.py  concolic.py  concrete.py  evm.py  symbolic.py
concolic_eth_swap/deployment/: __init__.py  deploy.py  distributed_coordinator.py
concolic_eth_swap/ethereum/: __init__.py  contract_db.py  token_utils.py  trace_collector.py  tx_analyzer.py
concolic_eth_swap/rpc/: __init__.py  server.py
concolic_eth_swap/swap_detection/: __init__.py  analyzer.py  constraints.py  patterns.py
concolic_eth_swap/tests/: __init__.py  test_annotated_blocks.py  test_basic_blocks.py  test_concolic.py  test_swap_detection.py  test_symbolic.py
concolic_eth_swap/tests/fixtures/: eth_usdc_swap_trace.json  eth_usdc_swap_tx.json  non_swap_trace.json  non_swap_tx.json
contracts/: StorageTest.sol
decompiler/: decompiler.py  disassembler.py
decompiler/analysis/: argument_inference.py  context_builder.py  function_boundary.py  jump_classifier.py  jump_patterns.py  stack_analyzer.py  symbolic_executor.py
decompiler/core/: basic_block.py  function.py  instruction.py  jump_instruction.py  transactional_context.py
decompiler/utils/: evm_ops.py  z3_utils.py
script/: Swap.s.sol
src/: cli.py
src/tracer/: __init__.py  access_list_generator.py  enhanced_storage_analyzer.py  enhanced_symbolic_tracer.py  etherscan_client.py  evm_opcodes.py  evmole_integration.py  hybrid_type_inference.py  key_level_storage_analyzer.py  storage_analyzer.py  symbolic_tracer.py
tests/: conftest.py  test_cli_access_list.py  test_context_builder.py  test_function_boundary.py  test_hypothesis_opcodes.py  test_jump_patterns.py  test_symbolic_execution.py  test_transactional_context.py
