[project]
name = "s3a"
version = "0.0.1"
description = "SMT-based Symbolic Storage Analysis for the EVM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
name = "s3a"
version = "0.0.1"
description = "SMT based symbolic storage analysis"
authors = ["sam bacha <sam@manifoldfinance.com>"]
license = "GPL-2.0-Only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
z3-solver = "^4.14.1.0"
eth-utils = "^5.2.0"
web3 = "^7.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
