[project]
name = "s3a"
version = "0.0.1"
description = "SMT-based Symbolic Storage Analysis for the EVM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataclasses-json>=0.5.6",
    "eth-abi>=2.1.1",
    "eth-utils>=1.10.0",
    "evmole>=0.7.2",
    "jsonrpcserver>=5.0.9",
    "networkx>=2.5",
    "py-evm>=0.5.0",
    "pyevmasm>=0.2.3",
    "redis>=5.2.1",
    "structlog>=21.1.0",
    "web3>=5.23.0",
    "z3-solver>=4.8.10",
]

[tool.poetry]
name = "s3a"
version = "0.0.1"
description = "SMT based symbolic storage analysis"
authors = ["sam bacha <sam@manifoldfinance.com>"]
license = "GPL-2.0-Only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
z3-solver = "^4.14.1.0"
eth-utils = "^5.2.0"
web3 = "^7.9.0"
evmole = "^0.1.0"  # EVM bytecode decompiler for enhanced analysis

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.130.5"
pytest = "^8.3.5"

[dependency-groups]
dev = [
    "pytest>=6.2.5",
]

